fixed nav bar spacing bug

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -70,7 +70,7 @@
             a{
                 color: #FFCD33;
                 font-weight: 500;
-                // margin-left: 25px;
+                margin-left: 25px;
                 -webkit-transition: cover 0.3s ease-in-out;
                 -moz-transition: cover 0.3s ease-in-out;
                 -o-transition: cover 0.3s ease-in-out;
@@ -95,7 +95,7 @@
                 color: #fff;
                 font-size: 18px;
                 font-weight: 500;
-                // margin-left: 25px;
+                margin-left: 25px;
                 -webkit-transition: cover 0.3s ease-in-out;
                 -moz-transition: cover 0.3s ease-in-out;
                 -o-transition: cover 0.3s ease-in-out;
